--- a/package.json
+++ b/package.json
@@ -10,8 +10,31 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-community/geolocation": "^3.0.5",
+    "@react-native-community/netinfo": "^9.3.7",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/drawer": "^6.6.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
     "react": "18.2.0",
-    "react-native": "0.73.1"
+    "react-native": "0.73.1",
+    "react-native-bouncy-checkbox": "^3.0.5",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-image-picker": "^5.0.1",
+    "react-native-maps": "^1.4.0",
+    "react-native-maps-directions": "^1.9.0",
+    "react-native-reanimated": "^2.17.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
+    "react-native-simple-bottom-sheet": "^1.0.4",
+    "react-native-sound": "^0.11.2",
+    "react-native-swiper": "^1.6.0",
+    "react-native-tab-view": "^3.5.1",
+    "react-native-toast-message": "^2.1.5",
+    "react-navigation": "^4.4.4",
+    "react-native-webview": "^13.3.1",
+    "socket.io-client": "^4.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
