--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "react-native-screens": "^3.18.2",
     "react-native-simple-bottom-sheet": "^1.0.4",
     "react-native-sound": "^0.11.2",
+    "react-native-svg": "^14.1.0",
+    "react-native-svg-transformer": "^1.3.0",
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.5.1",
     "react-native-toast-message": "^2.1.5",
-    "react-navigation": "^4.4.4",
     "react-native-webview": "^13.3.1",
+    "react-navigation": "^4.4.4",
     "socket.io-client": "^4.7.1"
   },
   "devDependencies": {
