--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,14 @@
       android:icon="@mipmap/ic_launcher"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
-      android:theme="@style/AppTheme">
+      android:theme="@style/AppTheme"
+            android:networkSecurityConfig="@xml/network_security_config"
+      >
+
+         <meta-data
+     android:name="com.google.android.geo.API_KEY"
+     android:value="AIzaSyDJ_sm-EFNvOBvTLMKbDi8CAT8G21GxDvQ"/>
+  
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
