--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.10",
-    "@react-native-community/geolocation": "^3.0.5",
+    "@react-native-community/geolocation": "^3.1.0",
     "@react-native-community/netinfo": "^9.3.7",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/drawer": "^6.6.0",
@@ -24,6 +24,7 @@
     "react-native-image-picker": "^5.0.1",
     "react-native-maps": "^1.4.0",
     "react-native-maps-directions": "^1.9.0",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^2.17.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
