--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -41,5 +41,5 @@ newArchEnabled=false
 hermesEnabled=true
 MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
 MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
-MYAPP_UPLOAD_STORE_PASSWORD=Cjsmith.12
-MYAPP_UPLOAD_KEY_PASSWORD=Cjsmith.12
+MYAPP_UPLOAD_STORE_PASSWORD=dashx12
+MYAPP_UPLOAD_KEY_PASSWORD=dashx12
