--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "formik": "^2.4.5",
+    "libphonenumber-js": "^1.10.57",
     "react": "18.2.0",
     "react-native": "0.73.1",
     "react-native-bouncy-checkbox": "^3.0.5",
@@ -40,7 +42,8 @@
     "react-native-toast-message": "^2.1.5",
     "react-native-webview": "^13.3.1",
     "react-navigation": "^4.4.4",
-    "socket.io-client": "^4.7.1"
+    "socket.io-client": "^4.7.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
