--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-maps": "^1.4.0",
     "react-native-maps-directions": "^1.9.0",
     "react-native-paper": "^5.11.6",
+    "react-native-permissions": "^4.1.4",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "^4.4.1",
