--- a/ios/dashx/Info.plist
+++ b/ios/dashx/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>dashx</string>
+	<string>DashX-User</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -13,7 +13,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>$(PRODUCT_NAME)</string>
+	<string>DashX-User</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -31,12 +31,25 @@
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
+	
+<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+<string>Privacy - Location Always and When In Use Usage Description</string>
+<key>NSLocationAlwaysUsageDescription</key>
+<string>Privacy - Location Always Usage Description</string>
 	<key>NSCameraUsageDescription</key>
-	<string>Allow permission to use your camera</string>
+    <string>Allow access to the camera to take and upload photos directly within the app.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>we need to use location</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+<string>We need access to your photo library to let you select photos to upload and to save photos you download from the app.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>Allow permission to use you camera</string>
+	
+	<string>Allow access to the gallery to upload photos</string>
+	<key>NSAppleMusicUsageDescription</key>
+<string>This app requires access to your music library to play music and access playlists.</string>
+<key>NSPhotoLibraryUsageDescription</key>
+<string>We need access to your photo library to let you select photos to upload and to save photos you download from the app.</string>
+
 	<key>UIAppFonts</key>
 	<array>
 		<string>Inter-Black.ttf</string>
